# MkvBatchMux

./: .gitignore  README.md  components.json  implementation.md  index.html  logs.txt  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.json
.github/workflows/: build.yml
scripts/: bump-version.mjs
src/: App.css  index.css  language.json  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  session.rs
src/app/: App.tsx
src/app/routes/: NotFoundPage.tsx  WorkspacePage.tsx
src/app/styles/: global.css
src/components/: HistoryToolbar.tsx  LanguageSelect.tsx  SessionRecoveryDialog.tsx
src/components/shared/: AppShell.tsx  BaseModal.tsx  Buttons.tsx  CommandBar.tsx  DataTable.tsx  DialogShell.tsx  EmptyState.tsx  Fields.tsx  IconButton.tsx  PageLayout.tsx  ReorderableTable.tsx  SectionHeader.tsx  SidebarNav.tsx
src/components/ui/: alert.tsx  button.tsx  checkbox.tsx  dialog.tsx  input.tsx  progress.tsx  radio-group.tsx  select.tsx  switch.tsx  tabs.tsx
src/components/workspace/: AttachmentsPanel.tsx  AttachmentsTab.tsx  AudiosTab.tsx  ChaptersPanel.tsx  ChaptersTab.tsx  JobQueuePanel.tsx  KeyboardShortcutsDialog.tsx  ModifyTracksDialog.tsx  MuxSettingTab.tsx  OptionsDialog.tsx  OutputSettingsPanel.tsx  SourceFilesPanel.tsx  (+9 more)
src/data/: languages-iso6393.ts
src/hooks/: useCommand.ts  useKeyboardShortcuts.ts
src/lib/: backend.ts  extensions.ts  matchUtils.ts  sessionManager.ts
src/pages/: Index.tsx
src/stores/: useHistoryStore.ts  useSessionStore.ts  useTabState.ts
src/types/: index.ts
(+69 files in other folders)
