[package]
name = "mkv_batch_muxing_tool"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "dialog-open", "dialog-save", "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
crc32fast = "1"
fs2 = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
